implementando abas para consultar e atualizar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,10 @@
   <mat-tab label="Cadastrar Pessoa">
     <app-cadastrar></app-cadastrar>
   </mat-tab>
+  <mat-tab label="Consultar Pessoa">
+    <app-consultar></app-consultar>
+  </mat-tab>
+  <mat-tab label="Atualizar Pessoa">
+    <app-atualizar></app-atualizar>
+  </mat-tab>
 </mat-tab-group>
