implementando aba de listar, desativar e deletar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,7 @@
   <mat-tab label="Atualizar Pessoa">
     <app-atualizar></app-atualizar>
   </mat-tab>
+  <mat-tab label="Listar Pessoas">
+    <app-listar></app-listar>
+  </mat-tab>
 </mat-tab-group>
