--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,7 @@
 <mat-toolbar color="primary">
   <span>Gerenciador de Pessoas</span>
+  <span class="spacer"></span>
+  <button mat-button (click)="authService.logout()" *ngIf="authService.isLoggedIn()">Logout</button>
 </mat-toolbar>
 
-<mat-tab-group>
-  <mat-tab label="Cadastrar Pessoa">
-    <app-cadastrar></app-cadastrar>
-  </mat-tab>
-  <mat-tab label="Consultar Pessoa">
-    <app-consultar></app-consultar>
-  </mat-tab>
-  <mat-tab label="Atualizar Pessoa">
-    <app-atualizar></app-atualizar>
-  </mat-tab>
-  <mat-tab label="Listar Pessoas">
-    <app-listar></app-listar>
-  </mat-tab>
-</mat-tab-group>
+<router-outlet></router-outlet>
