--- a/src/app/atualizar/atualizar.component.html
+++ b/src/app/atualizar/atualizar.component.html
@@ -19,50 +19,50 @@
       <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="ativo">
+    <ng-container matColumnDef="active">
       <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.ativo ? 'Ativo' : 'Inativo'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.active ? 'Ativo' : 'Inativo'}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="nome">
+    <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef class="spaced-column"> Nome </th>
       <td mat-cell *matCellDef="let element" class="editable-cell">
-        <input matInput [(ngModel)]="resultados.nome" (input)="verificarMudancas()">
+        <input matInput [(ngModel)]="resultados.name" (input)="verificarMudancas()">
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="dataNascimento">
+    <ng-container matColumnDef="birthDate">
       <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
       <td mat-cell *matCellDef="let element" class="editable-cell">
-        <input matInput [(ngModel)]="resultados.dataNascimento" (input)="verificarMudancas()">
+        <input matInput [(ngModel)]="resultados.birthDate" (input)="verificarMudancas()">
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="logradouro">
+    <ng-container matColumnDef="street">
       <th mat-header-cell *matHeaderCellDef> Logradouro </th>
       <td mat-cell *matCellDef="let element" class="editable-cell">
-        <input matInput [(ngModel)]="resultados.enderecos[0].logradouro" (input)="verificarMudancas()">
+        <input matInput [(ngModel)]="resultados.addresses[0].street" (input)="verificarMudancas()">
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="cep">
+    <ng-container matColumnDef="zipcode">
       <th mat-header-cell *matHeaderCellDef> CEP </th>
       <td mat-cell *matCellDef="let element" class="editable-cell">
-        <input matInput [(ngModel)]="resultados.enderecos[0].cep" (input)="verificarMudancas()">
+        <input matInput [(ngModel)]="resultados.addresses[0].zipcode" (input)="verificarMudancas()">
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="numero">
+    <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef> Número </th>
       <td mat-cell *matCellDef="let element" class="editable-cell">
-        <input matInput [(ngModel)]="resultados.enderecos[0].numero" (input)="verificarMudancas()">
+        <input matInput [(ngModel)]="resultados.addresses[0].number" (input)="verificarMudancas()">
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="cidade">
+    <ng-container matColumnDef="city">
       <th mat-header-cell *matHeaderCellDef> Cidade </th>
       <td mat-cell *matCellDef="let element" class="editable-cell">
-        <input matInput [(ngModel)]="resultados.enderecos[0].cidade" (input)="verificarMudancas()">
+        <input matInput [(ngModel)]="resultados.addresses[0].city" (input)="verificarMudancas()">
       </td>
     </ng-container>
 
