--- a/src/app/consultar/consultar.component.html
+++ b/src/app/consultar/consultar.component.html
@@ -20,44 +20,44 @@
         <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="ativo">
+      <ng-container matColumnDef="active">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.ativo}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.active}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="nome">
+      <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="dataNascimento">
+      <ng-container matColumnDef="birthDate">
         <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
-        <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="logradouro">
+      <ng-container matColumnDef="street">
         <th mat-header-cell *matHeaderCellDef> Logradouro </th>
-        <td mat-cell *matCellDef="let element"> {{element.logradouro}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.street}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="cep">
+      <ng-container matColumnDef="zipcode">
         <th mat-header-cell *matHeaderCellDef> CEP </th>
-        <td mat-cell *matCellDef="let element"> {{element.cep}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.zipcode}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="numero">
+      <ng-container matColumnDef="number">
         <th mat-header-cell *matHeaderCellDef> Número </th>
-        <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.number}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="cidade">
+      <ng-container matColumnDef="city">
         <th mat-header-cell *matHeaderCellDef> Cidade </th>
-        <td mat-cell *matCellDef="let element"> {{element.cidade}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.city}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="enderecoPrincipal">
+      <ng-container matColumnDef="primaryAddress">
         <th mat-header-cell *matHeaderCellDef> Endereço Principal </th>
-        <td mat-cell *matCellDef="let element"> {{element.enderecoPrincipal}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.primaryAddress}} </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
