--- a/src/app/listar/listar.component.html
+++ b/src/app/listar/listar.component.html
@@ -15,52 +15,52 @@
         <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="ativo">
+      <ng-container matColumnDef="active">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.ativo ? 'Ativo' : 'Inativo'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.active ? 'Ativo' : 'Inativo'}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="nome">
+      <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="dataNascimento">
+      <ng-container matColumnDef="birthDate">
         <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
-        <td mat-cell *matCellDef="let element"> {{element.dataNascimento}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="logradouro">
+      <ng-container matColumnDef="street">
         <th mat-header-cell *matHeaderCellDef> Logradouro </th>
-        <td mat-cell *matCellDef="let element"> {{element.enderecos[0].logradouro}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.addresses[0].street}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="cep">
+      <ng-container matColumnDef="zipcode">
         <th mat-header-cell *matHeaderCellDef> CEP </th>
-        <td mat-cell *matCellDef="let element"> {{element.enderecos[0].cep}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.addresses[0].zipcode}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="numero">
+      <ng-container matColumnDef="number">
         <th mat-header-cell *matHeaderCellDef> Número </th>
-        <td mat-cell *matCellDef="let element"> {{element.enderecos[0].numero}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.addresses[0].number}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="cidade">
+      <ng-container matColumnDef="city">
         <th mat-header-cell *matHeaderCellDef> Cidade </th>
-        <td mat-cell *matCellDef="let element"> {{element.enderecos[0].cidade}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.addresses[0].city}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="enderecoPrincipal">
+      <ng-container matColumnDef="primaryAddress">
         <th mat-header-cell *matHeaderCellDef> Endereço Principal </th>
-        <td mat-cell *matCellDef="let element"> {{element.enderecos[0].enderecoPrincipal ? 'Sim' : 'Não'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.addresses[0].primaryAddress ? 'Sim' : 'Não'}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="acoes">
+      <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="primary" (click)="ativarPessoa(element)" [disabled]="element.ativo">Ativar</button>
-          <button mat-button color="warn" (click)="desativarPessoa(element.cpf)" [disabled]="!element.ativo">Desativar</button>
-          <button mat-button color="warn" (click)="excluirPessoa(element.cpf)" [disabled]="element.ativo">Excluir</button>
+          <button mat-button color="primary" (click)="ativarPessoa(element)" [disabled]="element.active">Ativar</button>
+          <button mat-button color="warn" (click)="desativarPessoa(element.cpf)" [disabled]="!element.active">Desativar</button>
+          <button mat-button color="warn" (click)="excluirPessoa(element.cpf)" [disabled]="element.active">Excluir</button>
         </td>
       </ng-container>
   
